5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1760_672.log
== TEST (2019-05-20 18:46:15) 
-- CODE:
from numpy import* 

v = array(eval(input("v")))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 18:46:59) 
-- CODE:
from numpy import* 

v = array(eval(input("v:")))

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:06:47) 
-- CODE:
from numpy import* 
votos = array(eval(input("Qtde de votos: ")))

print(sum(votos[:-1]))

print(sum(votos[:-3]))

venc = max(votos[:-3])/sum(votos[:-3])*100
print(round(venc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:07:26) 
-- CODE:
from numpy import* 
votos = array(eval(input("Qtde de votos: ")))

print(sum(votos[:-1]))

print(sum(votos[:-3]))

venc = max(votos[:-3])/sum(votos[:-3])*100
print(round(venc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:07:41) 
-- CODE:
from numpy import* 
votos = array(eval(input("Qtde de votos: ")))

print(sum(votos[:-1]))

print(sum(votos[:-3]))

venc = max(votos[:-3])/sum(votos[:-3])*100
print(round(venc,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:25:52) 
-- CODE:
from numpy import* 

s = "tolkien"
new = s.replace('t','r')
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 19:26:04) 
-- CODE:
from numpy import* 

s = "tolkien"
new = s.replace('t','r')
print(new)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:27:03) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n)
   v[i] = 1
	i= i + 1
print(v)

-- ERROR:
File "XXXX", line 5
    while(i<n)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:27:25) 
-- CODE:
from numpy import* 
n = int(input())
i=0

while(i<n)
   v[i] = 1
	i= i + 1
print(v)

-- ERROR:
File "XXXX", line 5
    while(i<n)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:27:48) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v[i] = 1
	i= i + 1
print(v)

-- ERROR:
File "XXXX", line 7
    i= i + 1
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:28:07) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v[i] = 1
		i= i + 1
print(v)

-- ERROR:
File "XXXX", line 7
    i= i + 1
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:28:12) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   	v[i] = 1
		i= i + 1
print(v)

-- ERROR:
File "XXXX", line 7
    i= i + 1
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:28:20) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   	v[i] = 1
		i= i + 1
 print(v)

-- ERROR:
File "XXXX", line 7
    i= i + 1
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:28:34) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
  v[i] = 1
  i= i + 1
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:29:39) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
  v[i] = 1
  i= i + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:29:49) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v[i] = 1
  i= i + 1


-- ERROR:
File "XXXX", line 7
    i= i + 1
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:29:59) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v[i] = 1
   i= i + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:30:26) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v  = 1
   i= i + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:30:42) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v  = 1
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:30:59) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v  = 1
   i= i + 1

print(v[])

-- ERROR:
File "XXXX", line 9
    print(v[])
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:31:05) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v  = 1
   i= i + 1

print(v[])

-- EXECUTION TIME:
0.15469
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 9
    print(v[])
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:31:13) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v  = 1
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:31:35) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v[i]  = 1
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:31:56) 
-- CODE:
from numpy import* 
n = int(input())
i=1
v = array(int())
while(i<n):
   v[i]  = 1
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:35:15) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v[i]  = array([1])
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:35:28) 
-- CODE:
from numpy import* 
n = int(input())
i=0
v = array(int())
while(i<n):
   v  = array([1])
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:35:41) 
-- CODE:
from numpy import* 
n = int(input())
i=0

while(i<n):
   v  = array([1])
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:36:00) 
-- CODE:
from numpy import* 
n = int(input())
i=0

while(i<n):
   v[ i ]  = array([1])
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:36:10) 
-- CODE:
from numpy import* 
n = int(input())
i=0

while(i<n):
   v[i]  = array([1])
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:36:14) 
-- CODE:
from numpy import* 
n = int(input())
i=0

while(i<n):
   v[i]  = array([1])
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:40:18) 
-- CODE:
from numpy import* 
n = int(input())
i=0

while(i<n):
   v[i] = array(int([1]))
   i= i + 1

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
